overflow bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,12 +18,14 @@ html{scroll-behavior:smooth}
 
 
 body {
+  background-color: #242424;
   margin: 0;
   overflow-x: hidden;
 }
 
 section{
   overflow-x: hidden;
+  overflow-y: visible;
   max-width: 100vw;
   margin-bottom: .3em;
 }
